[BACKLOG-37059] Fixed current theme not being checked on the burger menu and burger menu visible in other themes

--- a/user-console/src/main/resources/org/pentaho/mantle/public/MantleStyle.css
+++ b/user-console/src/main/resources/org/pentaho/mantle/public/MantleStyle.css
@@ -377,6 +377,10 @@ code {
   bottom: 0;
 }
 
+#burgerToolbar {
+  display: none;
+}
+
 .pucContentDeck {
   height: 100%;
   width: 100%;
